--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -80,15 +80,59 @@ h1 {
 .community-detail {
 	.banner {
 		position: relative;
+		height: 80px;
+		> p {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+		}
 		.no-banner {
 			width: 100%;
-			height: 40px;
-			background: #ccc;
+			height: 100%;
+			background: #ddd;
+			color: #fff;
 		}
 		.url {
 			position: absolute;
 			top: 10px;
 			left: 10px;
+
+			.url-img {
+				position: relative;
+				display: inline-block;
+				img {
+					width: 100%;
+				}
+				span {
+					&:first-child {
+						border-radius: 50%;
+						overflow: hidden;
+						display: inline-block;
+						width: 100px;
+						height: 100px;
+						img {
+							height: auto;
+						}
+					}
+					&:nth-child(2) {
+						background: #fff;
+						padding: 5px;
+						border-radius: 50%;
+						display: inline-block;
+						width: 30px;
+						height: 30px;
+						position: absolute;
+						bottom: 0;
+						right: 0;
+						z-index: 5;
+						img {
+							width: 100%;
+							height: 100%;
+						}
+					}
+				}
+			}
 		}
 	}
 
@@ -109,7 +153,7 @@ h1 {
 				position: absolute;
 				top: 0;
 				left: 0;
-				background: lightgoldenrodyellow;
+				background: gainsboro;
 				width: 100%;
 				height: 40px;
 				h3 {
