Post(글 생성) 추가

--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -54,6 +54,8 @@ input[type='submit'] {
 	height: 30px;
 	min-width: 50px;
 	border-radius: 5px;
+	font-size: 16px;
+	cursor: pointer;
 }
 
 h1 {
@@ -116,6 +118,7 @@ h1 {
 						}
 					}
 					&:nth-child(2) {
+						cursor: pointer;
 						background: #fff;
 						padding: 5px;
 						border-radius: 50%;
@@ -163,6 +166,49 @@ h1 {
 			.detail {
 				padding-top: 45px;
 			}
+		}
+	}
+}
+
+//포스트 생성
+.create-post {
+	z-index: 100;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.3);
+	form {
+		width: 50vw;
+		height: 50vh;
+		background-color: #fff;
+		border-radius: 15px;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		.close {
+			position: absolute;
+			right: 10px;
+			top: 10px;
+		}
+	}
+}
+.each-post {
+	margin: 10px;
+	padding: 10px;
+	background: rgb(219, 255, 240);
+	border-radius: 15px;
+
+	h1 {
+		font-size: 18px;
+	}
+	p {
+		&.body {
+			padding: 5px 0;
 		}
 	}
 }
